# powertxt

./: .pdm-python  LICENSE.md  README.md  pyproject.toml
src/powertxt/: constants.py  powertxt.py
tests/: test_baseclass.py  text1.txt
