[project]
name = "powertxt"
version = "0.1.0"
description = "A simple library for text files"
authors = [
    {name = "Matheus Soares", email = "msoareseq@live.com"},
]
dependencies = [
    "pytest>=8.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
